[gd_scene load_steps=13 format=3 uid="uid://7ddvl2vt3qgg"]

[ext_resource type="Script" path="res://zootopia.gd" id="1_s0h04"]
[ext_resource type="Texture2D" uid="uid://cc6enl75iwa2e" path="res://Art/Escenarios_Mundos/salapoli.png" id="2_tcwh4"]
[ext_resource type="Texture2D" uid="uid://c8fq7wjp4tfqo" path="res://Art/Sprites/sospechosos-removebg-preview.png" id="3_0wk7x"]
[ext_resource type="Texture2D" uid="uid://ce2qsc71thjpc" path="res://Art/Sprites/gazelle-removebg-preview.png" id="4_ukplj"]
[ext_resource type="Texture2D" uid="uid://d2hcbv4rcknbd" path="res://Art/Sprites/yaxfondo-removebg-preview.png" id="5_tlp0t"]
[ext_resource type="Texture2D" uid="uid://bxs7l0etn0x8e" path="res://Art/Sprites/oficial.png" id="6_l05wi"]
[ext_resource type="Texture2D" uid="uid://du33tn2pqh5hg" path="res://Art/Sprites/mrbig-removebg-preview.png" id="7_auhao"]
[ext_resource type="PackedScene" uid="uid://cn0q3cfb0dctw" path="res://introzootopia.tscn" id="8_x8b3o"]

[sub_resource type="LabelSettings" id="LabelSettings_oadss"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_xk03b"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_j5hp5"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_pi6pg"]
font_size = 35

[node name="zootopia" type="Node2D"]
script = ExtResource("1_s0h04")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = -4.0
offset_right = 1179.0
offset_bottom = 694.0
texture = ExtResource("2_tcwh4")

[node name="Button" type="Button" parent="."]
offset_left = 295.0
offset_top = 476.0
offset_right = 904.0
offset_bottom = 615.0
text = "Regresar"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 300.0
offset_top = 136.0
offset_right = 388.0
offset_bottom = 201.0
text = "    A"
label_settings = SubResource("LabelSettings_oadss")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 502.0
offset_top = 150.0
offset_right = 590.0
offset_bottom = 215.0
text = "   B"
label_settings = SubResource("LabelSettings_xk03b")

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 708.0
offset_top = 24.0
offset_right = 762.0
offset_bottom = 59.0
text = "  C"
label_settings = SubResource("LabelSettings_j5hp5")

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = 856.0
offset_top = 324.0
offset_right = 896.0
offset_bottom = 347.0
text = " D"
label_settings = SubResource("LabelSettings_pi6pg")

[node name="Sospechosos-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(599, 272)
scale = Vector2(1.48043, 1.26956)
texture = ExtResource("3_0wk7x")

[node name="btA" type="Button" parent="."]
visible = false
offset_left = 318.0
offset_top = 319.0
offset_right = 382.0
offset_bottom = 417.0
theme_override_font_sizes/font_size = 65
text = "A"

[node name="btB" type="Button" parent="."]
visible = false
offset_left = 524.0
offset_top = 317.0
offset_right = 588.0
offset_bottom = 415.0
theme_override_font_sizes/font_size = 65
text = "B"

[node name="btC" type="Button" parent="."]
visible = false
offset_left = 707.0
offset_top = 310.0
offset_right = 771.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 65
text = "C"

[node name="btD" type="Button" parent="."]
visible = false
offset_left = 838.0
offset_top = 261.0
offset_right = 902.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 65
text = "D"

[node name="Gazelle" type="Sprite2D" parent="."]
visible = false
position = Vector2(634, 300)
scale = Vector2(0.700658, 0.627129)
texture = ExtResource("4_ukplj")

[node name="Yax" type="Sprite2D" parent="."]
visible = false
position = Vector2(599, 301)
texture = ExtResource("5_tlp0t")

[node name="Oficial" type="Sprite2D" parent="."]
visible = false
position = Vector2(570, 320)
texture = ExtResource("6_l05wi")

[node name="Mrbig" type="Sprite2D" parent="."]
visible = false
position = Vector2(587, 319)
scale = Vector2(0.834043, 0.848399)
texture = ExtResource("7_auhao")

[node name="Node2D" parent="." instance=ExtResource("8_x8b3o")]
position = Vector2(12, 400)

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 275.0
offset_top = 284.0
offset_right = 413.0
offset_bottom = 377.0
theme_override_font_sizes/font_size = 65
text = "A"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 485.0
offset_top = 281.0
offset_right = 623.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 65
text = "B"

[node name="Button4" type="Button" parent="."]
visible = false
offset_left = 660.0
offset_top = 271.0
offset_right = 798.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 65
text = "C
"

[node name="Button5" type="Button" parent="."]
visible = false
offset_left = 825.0
offset_top = 266.0
offset_right = 963.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 65
text = "D
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btA" to="." method="_on_bt_a_pressed"]
[connection signal="pressed" from="btB" to="." method="_on_bt_b_pressed"]
[connection signal="pressed" from="btC" to="." method="_on_bt_c_pressed"]
[connection signal="pressed" from="btD" to="." method="_on_bt_d_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
